[metadata]
# replace with your username:
name = Test_Load
version = 1.0.0
author = Huynh Tan Quoc
author_email = huynhquoc1990@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/huynhquoc1990/Test_Load.git
project_urls =
    Bug Tracker = https://github.com/huynhquoc1990/Test_Load.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src